firmware/lib/control-table/tests/ui/repr_transparent.stderr
error: Block derive requires #[repr(C)] and forbids alternate reprs
 --> tests/ui/repr_transparent.rs:3:8
  |
3 | #[repr(transparent)]
  |        ^^^^^^^^^^^
